# doorlockd

./: .gitignore  CMakeLists.txt  Makefile  TODO  VERSION  config.cfg  config.h.in  daemon.cpp  door.cpp  door.h  doorcmds.h  doorlockd  doorlockd-passwd  doorlockd-serialsim  doorlockd-slave  doorlockd.cfg  doorlockd.default.cfg  doorlockd.py  doorlockd.service  doorstate  doorstate.service  epaper.cpp  gpio-wait.c  logger.h  logic.cpp  logic.h  main.cpp  setup.py  template.h  util.cpp  util.h
ansible/: inventory  main.yml  staging_pi
ansible/roles/acme_sh/tasks/: main.yml
ansible/roles/base/tasks/: main.yml
ansible/roles/base/vars/: main.yml
ansible/roles/desktop/handlers/: main.yml
ansible/roles/desktop/tasks/: main.yml
ansible/roles/doorlock/files/: Doorlock.desktop  launch_doorlock_session.sh
ansible/roles/doorlock/meta/: main.yml
ansible/roles/doorlock/tasks/: main.yml
ansible/roles/doorlockd/files/: doorlock_nginx_vhost  nsupdate.key
ansible/roles/doorlockd/handlers/: main.yml
ansible/roles/doorlockd/meta/: main.yml
ansible/roles/doorlockd/tasks/: main.yml
ansible/roles/doorlockd/templates/: doorlockd.cfg
ansible/roles/doorlockd/vars/: main.yml
ansible/roles/nginx/files/: nginx.conf
ansible/roles/nginx/handlers/: main.yml
ansible/roles/nginx/tasks/: main.yml
arch/: PKGBUILD  doorlockd.install
avr-code/: Makefile  Pinout  io.h  main.c  protocol.h  uart.c  uart.h
cad/: cable_guide.par  case.asm  case.cfg  case_bottom.par  case_bottom.stl  case_top.par  case_top.stl  din_en_iso_10642_m3x12.par  switch.par  switch_nut.par
ci/: Makefile
doorlockd/: CMakeLists.txt  config.h.in  daemon.cpp  daemon.h  door.cpp  door.h  doorlockd.cpp  doormessage.h  epaper.cpp  epaper.h  logic.cpp  logic.h  main.cpp  response.cpp  response.h
doorlockd-new/: TODOs  config.cfg  doorlockd.py
doorlockd-new/ssl/: BKCA.crt
doorlockd-new/templates/: display.html  formhelpers.html  index.html
doorlockd/client/: doorlock-client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  wave.cpp  wave.h
doorlockd/daemon/: daemon.cpp  doorlockd.cpp
doorlockd/epaper/: bsp.h
doorlockd/lib/: clientmessage.cpp  clientmessage.h  door.cpp  door.h  doormessage.cpp  doormessage.h  logger.cpp  logger.h  logic.cpp  logic.h  request.cpp  request.h  response.cpp  response.h  util.cpp  util.h
doorlockd/scripts/: doorlockd.service  post_lock  post_unlock
doorlockd/src/: clientmessage.cpp  clientmessage.h  door.cpp  doorlock-client.cpp  doorlockd.cpp  logic.h  mainwindow.h  qrwidget.cpp  qrwidget.h  response.h  util.cpp  util.h
doorlockd/tools/: inject_doorcommand.sh
epaper/: Image_EAlogo.h  Image_PDlogo.h
etc/: doorlockd.blacklist  doorlockd.cfg
pydoorlock/: Authenticator.py  AvrDoorlock.py  Config.py  Door.py  Doorlock.py  DoorlockBackend.py  DoorlockResponse.py  EventClient.py  NukiBridge.py  SimulationBackend.py  WebApp.py
schematics/: Doorlock.brd  Doorlock.sch  Doorlock.txt
scripts/: doorlockd  doorlockd-start  doorlockd-stop  doorlockd.service  gen_protocol.sh  post_lock  post_unlock
share/doorlockd/scripts/: post_lock  post_present  post_unlock
share/doorlockd/templates/: display.html  index.html  layout.html
systemd/: doorlockd.service  doorstate.service
templates/: display.html  index.html  layout.html
webfrontend/: index.php
